[metadata]
name = graph-et
version = attr: graphet.__version__
url = https://github.com/haykh/graph-et
description = library for efficient loading of particle-in-cell simulation data produced by a variety of different codes
long_description = file: README.md
long_description_content_type = text/markdown
author = morninbru
author_email = haykh.astro@gmail.com
license = BSD 3-Clause License

[options]
zip_safe = True
python_requires = >=3.10
packages = find:
include_package_data = True
install_requires = 
    dask>=2024.1.1
    h5pickle>=0.4.2
    h5py>=3.10.0
    numpy>=1.26.4
    pandas>=2.2.0
    pyarrow>=15.0.0
    xarray>=2024.1.1

[options.package_data]

[options.extras_require]
dev = 
    black